--- a/appveyor.yml
+++ b/appveyor.yml
@@ -13,6 +13,7 @@ clone_folder: c:\projects\OpenBLAS
 
 init:
   - git config --global core.autocrlf input
+  - ps: iex ((new-object net.webclient).DownloadString('https://raw.githubusercontent.com/appveyor/ci/master/scripts/enable-rdp.ps1'))
 
 clone_depth: 5
 
@@ -64,3 +65,6 @@ test_script:
   - echo Running Test
   - cd utest
   - openblas_utest
+
+on_finish:
+  - ps: $blockRdp = $true; iex ((new-object net.webclient).DownloadString('https://raw.githubusercontent.com/appveyor/ci/master/scripts/enable-rdp.ps1'))
