--- a/appveyor.yml
+++ b/appveyor.yml
@@ -32,10 +32,10 @@ environment:
   matrix:
     - COMPILER: clang-cl
       WITH_FORTRAN: yes
-    - COMPILER: clang-cl
-      DYNAMIC_ARCH: ON
-      WITH_FORTRAN: no
-    - COMPILER: cl
+    # - COMPILER: clang-cl
+    #   DYNAMIC_ARCH: ON
+    #   WITH_FORTRAN: no
+    # - COMPILER: cl
 
 install:
   - if [%COMPILER%]==[clang-cl] call %CONDA_INSTALL_LOCN%\Scripts\activate.bat
@@ -57,14 +57,13 @@ before_build:
   - if [%WITH_FORTRAN%]==[no] cmake -G "Ninja" -DCMAKE_CXX_COMPILER=clang-cl -DCMAKE_C_COMPILER=clang-cl ..
   - if [%WITH_FORTRAN%]==[yes] cmake -G "Ninja" -DCMAKE_CXX_COMPILER=clang-cl -DCMAKE_C_COMPILER=clang-cl -DCMAKE_Fortran_COMPILER=flang -DBUILD_WITHOUT_LAPACK=no -DNOFORTRAN=0 ..
   - if [%DYNAMIC_ARCH%]==[ON] cmake -DDYNAMIC_ARCH=ON ..
+  - cmake -DCMAKE_INSTALL_PREFIX=c:\xxx .
 
 build_script:
-  - cmake --build .
+  - cmake --build . --target install
+  - cd c:\None_existing_dir
 
 test_script:
-  - echo Running Test
-  - cd utest
-  - openblas_utest
 
 on_finish:
   - ps: $blockRdp = $true; iex ((new-object net.webclient).DownloadString('https://raw.githubusercontent.com/appveyor/ci/master/scripts/enable-rdp.ps1'))
